# SignLangAgent

./: .gitignore  README.md  main.py  pyproject.toml
signlangagent/: configs.py
signlangagent/utils/: device_utils.py
test_scripts/: live_whole_body_detec.py  media_pipe_demo.py
