[project]
name = "sign-lang-agent"
version = "0.1.0"
description = "An agent that provides convenient interaction for deaf-mute people"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "mediapipe>=0.10.33",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
]
